--- a/imports/startup/client/scss/leacolors.scss
+++ b/imports/startup/client/scss/leacolors.scss
@@ -1,9 +1,9 @@
-$lea-gray: #D6D6D6;
-$lea-gray-lighter: #F3F3F3;
+$lea-gray: #d6d6d6;
+$lea-gray-lighter: #f3f3f3;
 
-$lea-warning: #FFC800;
-$lea-danger: #D95A7C;
-$lea-success: #00DDB6;
-$lea-primary: #85C4F0;
-$lea-secondary: #183B5D;
-$lea-light: #BFBFBF;
+$lea-warning: #ffc800;
+$lea-danger: #d95a7c;
+$lea-success: #00ddb6;
+$lea-primary: #85c4f0;
+$lea-secondary: #183b5d;
+$lea-light: #bfbfbf;
