scss add explicit style lint fail to check for CI fail/pass

--- a/imports/startup/client/scss/custom.scss
+++ b/imports/startup/client/scss/custom.scss
@@ -114,4 +114,4 @@ a:hover {
 /* -------end customization-------- */
 
 /* finally, import Bootstrap to set the changes! */
-@import '{}/node_modules/bootstrap/scss/bootstrap';
+@import '{}/node_modules/bootstrap/scss/bootstrap.scss';
