--- a/imports/ui/components/loading/loading.html
+++ b/imports/ui/components/loading/loading.html
@@ -2,5 +2,8 @@
     <span>
         <i class="fa fa-fw fas fa-spinner fa-pulse"></i>
         <span>{{i18n "common.loading"}}</span>
+        {{#if title}}
+            <span>{{title}}</span>
+        {{/if}}
     </span>
 </template>
