background-color to sidebar added

--- a/client/main.scss
+++ b/client/main.scss
@@ -1,3 +1,10 @@
 wrapper {
   min-height: 100vh;
 }
+
+.sidebar {
+  // min-width: 1rem;
+  background-color: #646464;
+  min-width: 1rem;
+  width: 5%;
+}
