--- a/imports/ui/layout/nav/side/navSide.html
+++ b/imports/ui/layout/nav/side/navSide.html
@@ -1,11 +1,29 @@
 <template name="navSide">
-	<nav class="col-md-3 d-none d-md-block bg-light sidebar">
+	<nav class="col-md-3 d-none d-md-block sidebar">
 		<div class="sidebar-sticky">
 			<ul id="main-sidebar" class="nav nav-pills flex-column mt-4">
                 <li class="nav-item">
+                    <a class="nav-link no-wrap" href="#" id="home">
+                        <i class="fa fas fa-fw fa-home"></i>
+                        <span>home</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link no-wrap" href="#" id="class">
+                        <i class="fa fas fa-fw fa-th-large"></i>
+                        <span>class</span>
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link no-wrap" href="#">
-                        <i class="fa fas fa-fw fa-user"></i>
-                        <span>route label</span>
+                        <i class="fa fas fa-fw fa-sliders-h"></i>
+                        <span>user</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link no-wrap" href="#">
+                        <i class="fa fas fa-fw fa-print"></i>
+                        <span>print</span>
                     </a>
                 </li>
 			</ul>
