work in progress

--- a/imports/ui/layout/nav/side/navSide.html
+++ b/imports/ui/layout/nav/side/navSide.html
@@ -3,7 +3,8 @@
 		<div class="sidebar-sticky">
 			<ul id="main-sidebar" class="nav nav-pills flex-column mt-4">
                 <li class="nav-item">
-                    <a class="nav-link no-wrap" href="#" id="home">
+                    <a class="nav-link no-wrap" href={{Routes "Routes.class.path"}} id="home">
+
                         <i class="fa fas fa-fw fa-home"></i>
                         <span>home</span>
                     </a>
