--- a/imports/ui/layout/nav/side/navSide.html
+++ b/imports/ui/layout/nav/side/navSide.html
@@ -3,31 +3,27 @@
 		<div class="sidebar-sticky">
 			<ul id="main-sidebar" class="nav nav-pills flex-column mt-4">
                 <li class="nav-item">
-                    <a class="nav-link no-wrap" href={{Routes "Routes.class.path"}} id="home">
-
-                        <i class="fa fas fa-fw fa-home"></i>
-                        <span>home</span>
-                    </a>
+                    {{#onLoaded loaded=componentsLoaded}}
+                        {{> link href=(route 'myClasses') icon="home" title='Routes.myClasses.label'}}
+                    {{/onLoaded}}
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link no-wrap" href="#" id="class">
-                        <i class="fa fas fa-fw fa-th-large"></i>
-                        <span>class</span>
-                    </a>
+                    {{#onLoaded loaded=componentsLoaded}}
+                        {{> link href=(route 'class' class) icon="th-large" title='Routes.class.label'}}
+                    {{/onLoaded}}
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link no-wrap" href="#">
-                        <i class="fa fas fa-fw fa-sliders-h"></i>
-                        <span>user</span>
-                    </a>
+                    {{#onLoaded loaded=componentsLoaded}}
+                        {{> link href=(route 'user' user) icon="sliders-h" title='Routes.user.label'}}
+                    {{/onLoaded}}
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link no-wrap" href="#">
-                        <i class="fa fas fa-fw fa-print"></i>
-                        <span>print</span>
-                    </a>
+                    {{#onLoaded loaded=componentsLoaded}}
+                        {{> link href='#' icon="print" title='actions.print'}}
+                    {{/onLoaded}}
                 </li>
 			</ul>
 		</div>
 	</nav>
+
 </template>
