--- a/imports/ui/layout/nav/side/scss/navSlide.scss
+++ b/imports/ui/layout/nav/side/scss/navSlide.scss
@@ -1,6 +1,20 @@
-.nav {
+.sidebar {
   background-color: #646464;
-  //height: 1000px;
   min-width: 1rem;
-  width: 7.5%;
+  width: 5%;
 }
+
+.side-nav-item {
+  border: #fff 1px solid;
+  border-radius: 5px;
+  margin: 15% 30%;
+  text-align: center;
+}
+
+.side-nav-item > a {
+  color: #fff !important;
+}
+
+
+
+
