ui layout navSide routes and Session integrated

--- a/imports/ui/layout/nav/side/scss/navSlide.scss
+++ b/imports/ui/layout/nav/side/scss/navSlide.scss
@@ -15,6 +15,10 @@
   color: #fff !important;
 }
 
+.sidebar-nav-item {
+  background-color: #646464;
+}
 
-
-
+.sidebar-nav-item:active {
+  background-color: #f59d1d;
+}
