--- a/imports/ui/layout/nav/side/navSide.html
+++ b/imports/ui/layout/nav/side/navSide.html
@@ -4,17 +4,17 @@
 			<ul id="main-sidebar" class="nav nav-pills flex-column mt-4">
                 <li class="nav-item side-nav-item" style='background-color:#f59d1d'>
                     {{#onLoaded loaded=componentsLoaded}}
-                        {{> link href=(route 'myClasses') icon="home" title='Routes.myClasses.label'}}
+                        {{> link href=(route 'myClasses') icon="home" title='Routes.myClasses.label' class="sidebar-nav-item" active=(currentRoute 'myClasses') }}
                     {{/onLoaded}}
                 </li>
                 <li class="nav-item side-nav-item">
                     {{#onLoaded loaded=componentsLoaded}}
-                        {{> link href=(route 'class' class) icon="th-large" title='Routes.class.label'}}
+                        {{> link href=(route 'class' currentClass) disabled=(classRouteDisabled) icon="th-large" title='Routes.class.label' class="sidebar-nav-item" active=(currentRoute 'class')}}
                     {{/onLoaded}}
                 </li>
                 <li class="nav-item side-nav-item">
                     {{#onLoaded loaded=componentsLoaded}}
-                        {{> link href=(route 'user' user) icon="sliders-h" title='Routes.user.label' disabled=true}}
+                        {{> link href=(route 'user' currentClass currentParticipant) disabled=(userRouteDisabled) icon="sliders-h" title='Routes.user.label' class="sidebar-nav-item" active=(currentRoute 'user')}}
                     {{/onLoaded}}
                 </li>
                 <li class="nav-item side-nav-item">
