commit to pull latest changes

--- a/imports/ui/layout/nav/side/navSide.html
+++ b/imports/ui/layout/nav/side/navSide.html
@@ -4,7 +4,7 @@
 			<ul id="main-sidebar" class="nav nav-pills flex-column mt-4">
                 <li class="nav-item side-nav-item" style='background-color:#f59d1d'>
                     {{#onLoaded loaded=componentsLoaded}}
-                        {{> link href=(route 'myClasses') icon="home" title='Routes.myClasses.label'}}
+                        {{> link href=(route 'myClasses') icon="home" title='Routes.myClasses.label' id="abc"}}
                     {{/onLoaded}}
                 </li>
                 <li class="nav-item side-nav-item">
