--- a/imports/ui/layout/nav/side/navSide.html
+++ b/imports/ui/layout/nav/side/navSide.html
@@ -1,29 +1,22 @@
 <template name="navSide">
 	<nav class="sidebar">
 		<div class="sidebar-sticky">
-			<ul id="main-sidebar" class="nav nav-pills flex-column mt-4">
-                <li class="nav-item side-nav-item" style='background-color:#f59d1d'>
-                    {{#onLoaded loaded=componentsLoaded}}
-                        {{> link href=(route 'myClasses') icon="home" title='Routes.myClasses.label' class="sidebar-nav-item" active=(currentRoute 'myClasses') }}
-                    {{/onLoaded}}
-                </li>
-                <li class="nav-item side-nav-item">
-                    {{#onLoaded loaded=componentsLoaded}}
-                        {{> link href=(route 'class' currentClass) disabled=(classRouteDisabled) icon="th-large" title='Routes.class.label' class="sidebar-nav-item" active=(currentRoute 'class')}}
-                    {{/onLoaded}}
-                </li>
-                <li class="nav-item side-nav-item">
-                    {{#onLoaded loaded=componentsLoaded}}
-                        {{> link href=(route 'user' currentClass currentParticipant) disabled=(userRouteDisabled) icon="sliders-h" title='Routes.user.label' class="sidebar-nav-item" active=(currentRoute 'user')}}
-                    {{/onLoaded}}
-                </li>
-                <li class="nav-item side-nav-item">
-                    {{#onLoaded loaded=componentsLoaded}}
-                        {{> link href='#' icon="print" title='actions.print' disabled=false}}
-                    {{/onLoaded}}
-                </li>
-			</ul>
+            {{#onLoaded loaded=componentsLoaded}}
+                {{#nav class="flex-column flex-wrap mt-4 justify-content-center"}}
+                    {{#navlink href=(route 'myClasses') class="sidebar-nav-item" active=(currentRoute 'myClasses')}}
+                        <span title='Routes.myClasses.label' class="fa fas fa-fw fa-home"></span>
+                    {{/navlink}}
+                    {{#navlink href=(route 'class' currentClass) class="sidebar-nav-item" disabled=(classRouteDisabled) active=(currentRoute 'class')}}
+                        <span title='Routes.class.label' class="fa fas fa-fw fa-th-large"></span>
+                    {{/navlink}}
+                    {{#navlink href=(route 'user' currentClass currentParticipant) class="sidebar-nav-item" disabled=(userRouteDisabled) active=(currentRoute 'user')}}
+                        <span title='Routes.user.label' class="fa fas fa-fw fa-sliders-h"></span>
+                    {{/navlink}}
+                    {{#navlink href='#' class="sidebar-nav-item " disabled=false }}
+                        <span title='actions.print' class="fa fas fa-fw fa-print"></span>
+                    {{/navlink}}
+                {{/nav}}
+            {{/onLoaded}}
 		</div>
 	</nav>
-
 </template>
