--- a/imports/ui/layout/nav/side/scss/navSlide.scss
+++ b/imports/ui/layout/nav/side/scss/navSlide.scss
@@ -4,31 +4,26 @@
   width: 5%;
 }
 
-.sidebar-nav-item {
+.sidebar-nav-link {
   border: #fff 1px solid;
   border-radius: 5px;
   margin-bottom: 20%;
   margin-left: auto;
   margin-right: auto;
+  padding: 0;
   text-align: center;
   vertical-align: middle;
   width: 2rem;
 }
 
-.sidebar-nav-item > a {
-  color: #fff !important;
-  padding: 0;
-}
-
-.sidebar-nav-item-active {
+.sidebar-nav-link.active {
   background-color: #f59d1d;
 }
 
-.sidebar-nav-item-inactive {
-  background-color: #646464;
+.sidebar-nav-link.disabled {
+  opacity: 0.4;
 }
 
-
-
-
-
+.sidebar-nav-item > a {
+  color: #fff !important;
+}
