--- a/imports/ui/layout/nav/side/scss/navSlide.scss
+++ b/imports/ui/layout/nav/side/scss/navSlide.scss
@@ -1,18 +1,20 @@
 .sidebar {
   background-color: #646464;
   min-width: 2rem;
-  width: 5%;
+  width: 3.5%;
 }
 
 .sidebar-nav-link {
+  align-items: center;
   border: #fff 1px solid;
   border-radius: 5px;
-  margin-bottom: 20%;
+  display: flex;
+  height: 2rem;
+  justify-content: center;
+  margin-bottom: 1rem;
   margin-left: auto;
   margin-right: auto;
   padding: 0;
-  text-align: center;
-  vertical-align: middle;
   width: 2rem;
 }
 
@@ -22,8 +24,4 @@
 
 .sidebar-nav-link.disabled {
   opacity: 0.4;
-}
-
-.sidebar-nav-item > a {
-  color: #fff !important;
 }
