--- a/imports/startup/client/scss/custom.scss
+++ b/imports/startup/client/scss/custom.scss
@@ -1,25 +1,26 @@
 /* custom.scss */
 /* import the necessary Bootstrap files */
-@import '{}/node_modules/bootstrap/scss/functions';
-@import '{}/node_modules/bootstrap/scss/variables';
-@import '{}/node_modules/bootstrap/scss/mixins/buttons';
-@import './leacolors';
+@import "{}/node_modules/bootstrap/scss/functions";
+@import "{}/node_modules/bootstrap/scss/variables";
+@import "{}/node_modules/bootstrap/scss/mixins/buttons";
+@import "./colors";
 
 /* -------begin customization-------- */
 
-
 /* simply assign the value */
-$body-bg: $lea-gray-lighter;
+$body-bg: $lea-light;
 
 /* or, use an existing variable */
 $theme-colors: (
-  warning: $lea-warning,
-  danger: $lea-danger,
-  success: $lea-success,
-  primary: $lea-primary,
-  secondary: $lea-secondary,
-  light: $lea-light,
-  gray: $lea-gray
+    primary: $lea-primary,
+    secondary: $lea-secondary,
+    light: $lea-light,
+    gray: $lea-gray,
+    dark: $lea-dark,
+    warning: $lea-warning,
+    danger: $lea-danger,
+    info: $lea-info,
+    success: $lea-success,
 );
 
 @each $color, $value in $theme-colors {
@@ -29,14 +30,12 @@ $theme-colors: (
   */
 
   .btn-#{$color} {
-    color: $white !important;
-
+    color: white !important;
     &:hover {
-      color: $white !important;
+      color: white !important;
     }
-
     &.active {
-      color: $white !important;
+      color: white !important;
     }
   }
 
@@ -46,11 +45,10 @@ $theme-colors: (
 
   .btn-outline-#{$color} {
     &:hover {
-      color: $white !important;
+      color: white !important;
     }
-
     &.active {
-      color: $white !important;
+      color: white !important;
     }
   }
 
@@ -59,17 +57,15 @@ $theme-colors: (
   */
 
   .lea-action-btn-#{$color} {
-    background-color: $white !important;
     color: $value !important;
-
+    background-color: white !important;
     &:hover {
       background-color: $value !important;
-      color: $white !important;
+      color: white !important;
     }
-
     &.active {
       background-color: $value !important;
-      color: $white !important;
+      color: white !important;
     }
   }
 
@@ -78,40 +74,42 @@ $theme-colors: (
   */
 
   .lea-action-btn-outline-#{$color} {
-    background-color: $white !important;
     color: $value !important;
-
+    background-color: white !important;
     &:hover {
       background-color: $value !important;
-      color: $white !important;
+      color: white !important;
     }
-
     &.active {
       background-color: $value !important;
-      color: $white !important;
+      color: white !important;
     }
   }
 }
 
+/* ------- end customization -------- */
 
+/* finally, import Bootstrap to set the changes! */
+@import "{}/node_modules/bootstrap/scss/bootstrap.scss";
+
+/* ------- override defaults -------- */
+
+a {
+  color: #183B5D;
+}
+
+a:hover {
+  color: #ACACAC;
+}
 
 .border-gray {
   border: solid $lea-gray !important;
 }
 
 .card {
-  border-radius: 0 !important;
+  border-radius: 0px !important;
 }
 
-a {
-  color: #183b5d !important;
+.modal-xxl {
+  max-width: 90vw !important;
 }
-
-a:hover {
-  color: #acacac !important;
-}
-
-/* -------end customization-------- */
-
-/* finally, import Bootstrap to set the changes! */
-@import '{}/node_modules/bootstrap/scss/bootstrap';
