issues with css fixed and modals for adding and updating course added

--- a/imports/ui/layout/nav/side/scss/navSlide.scss
+++ b/imports/ui/layout/nav/side/scss/navSlide.scss
@@ -8,7 +8,7 @@
   align-items: center;
   border: #fff 1px solid;
   border-radius: 5px;
-  display: flex;
+  display: flex !important;
   height: 2rem;
   justify-content: center;
   margin-bottom: 1rem;
