--- a/imports/ui/pages/myclasses/scss/myClasses.scss
+++ b/imports/ui/pages/myclasses/scss/myClasses.scss
@@ -13,7 +13,7 @@
 .course-items-icon-buttons {
   align-items: center;
   border-radius: 5px;
-  display: flex;
+  display: flex !important;
   height: 2rem;
   justify-content: center;
   margin-left: 0.5rem;
