--- a/imports/ui/pages/user/scss/user.scss
+++ b/imports/ui/pages/user/scss/user.scss
@@ -1,7 +1,7 @@
 .flip-card {
-  height: 200px;
+  height: 150px;
   perspective: 1000px; /* Remove this if you don't want the 3D effect */
-  width: 200px;
+  width: 100%;
 }
 
 .flip-card-inner {
