--- a/imports/ui/layout/nav/side/navSide.html
+++ b/imports/ui/layout/nav/side/navSide.html
@@ -1,5 +1,5 @@
 <template name="navSide">
-    <nav class="sidebar border-right">
+    <nav class="sidebar border-right {{class}}">
         <div class="sidebar-sticky">
             {{#onLoaded loaded=componentsLoaded}}
                 {{#nav class="flex-column flex-wrap mt-4 justify-content-center"}}
