--- a/imports/ui/layout/nav/top/navTop.html
+++ b/imports/ui/layout/nav/top/navTop.html
@@ -6,7 +6,7 @@
 			<li class="nav-item text-nowrap">
 				<a class="nav-link logout-button text-white" href="{{route 'logout'}}">
 					<i class="fa fas fa-fw fa-sign-out-alt"></i>
-					<span>{{i18n "common.logout"}}</span>
+					<span>{{i18n "actions.logout"}}</span>
 				</a>
 			</li>
 		</ul>
