api decorators unify decorators build api

--- a/imports/ui/layout/nav/top/navTop.html
+++ b/imports/ui/layout/nav/top/navTop.html
@@ -3,6 +3,12 @@
 		<a class="navbar-brand col-sm-3 col-md-2 mr-0 text-white" href="#">{{applicationName}}</a>
 		{{!<input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">}}
 		<ul class="navbar-nav px-3">
+            <li class="nav-item text-nowrap">
+                <a class="nav-link logout-button text-white" href="{{route 'admin'}}">
+                    {{> icon name="user"}}
+                    <span>{{i18n "routes.admin"}}</span>
+                </a>
+            </li>
 			<li class="nav-item text-nowrap">
 				<a class="nav-link logout-button text-white" href="{{route 'logout'}}">
 					<i class="fa fas fa-fw fa-sign-out-alt"></i>
