implemet data loading from remotes for pages

--- a/imports/ui/layout/containers/containers.html
+++ b/imports/ui/layout/containers/containers.html
@@ -7,6 +7,7 @@
         </main>
         {{> navBottom}}
     </wrapper>
+    {{> notifications }}
 </template>
 
 <!-- the login render target is used for logged-in users -->
@@ -21,4 +22,5 @@
         </main>
     </wrapper>
     {{> navBottom}}
+    {{> notifications }}
 </template>
