--- a/imports/ui/layout/nav/top/navTop.html
+++ b/imports/ui/layout/nav/top/navTop.html
@@ -1,20 +1,41 @@
 <template name="navTop">
-	<nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
-		<a class="navbar-brand col-sm-3 col-md-2 mr-0 text-white" href="#">{{applicationName}}</a>
-		{{!<input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">}}
-		<ul class="navbar-nav px-3">
-            <li class="nav-item text-nowrap">
-                <a class="nav-link logout-button text-white" href="{{route 'admin'}}">
-                    {{> icon name="user"}}
-                    <span>{{i18n "routes.admin"}}</span>
-                </a>
-            </li>
-			<li class="nav-item text-nowrap">
-				<a class="nav-link logout-button text-white" href="{{route 'logout'}}">
-					<i class="fa fas fa-fw fa-sign-out-alt"></i>
-					<span>{{i18n "actions.logout"}}</span>
-				</a>
-			</li>
-		</ul>
-	</nav>
+    <nav class="navbar navbar-dark navbar-expand-lg sticky-top bg-dark flex-md-nowrap p-0">
+        <a class="navbar-brand col-sm-3 col-md-2 mr-0 text-white"
+           href="#">{{applicationName}}</a>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse"
+                data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto px-3">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#"
+                       id="navbarDropdown" role="button" data-toggle="dropdown"
+                       aria-expanded="false">
+                        {{> icon name="user"}}
+                        {{username currentUser}}
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        {{#if canEditContent currentUser}}
+                            <a class="dropdown-item logout-button"
+                               href="{{route 'content'}}">
+                                {{> icon name="wrench"}}
+                                <span>{{i18n "routes.content"}}</span>
+                            </a>
+                            <div class="dropdown-divider"></div>
+                        {{/if}}
+                        <a class="dropdown-item logout-button"
+                           href="{{route 'logout'}}">
+                            <i class="fa fas fa-fw fa-sign-out-alt"></i>
+                            <span>{{i18n "actions.logout"}}</span>
+                        </a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </nav>
 </template>
