ui remote notifications layout+texts fixed

--- a/imports/ui/components/notifications/notifications.html
+++ b/imports/ui/components/notifications/notifications.html
@@ -13,10 +13,14 @@
          data-delay="{{delay}}"
          data-animation="{{animation}}"
          data-autohide="{{autohide}}">
-        <div class="toast-header bg-{{type}} text-white">
-            {{#if icon}}{{> icon name=icon}}{{/if}}
-            <strong>{{title}}</strong>
-            <small>{{subtitle}}</small>
+        <div class="toast-header bg-{{type}} text-white d-flex justify-content-between">
+            {{#if icon}}
+                {{> icon name=icon}}
+            {{/if}}
+            <span>
+                <strong>{{title}}</strong>
+                <small>{{subtitle}}</small>
+            </span>
             {{#if dismiss}}
                 <button type="button" class="ml-2 mb-1 close"
                         data-dismiss="toast" aria-label="Close">
