feature(login): request account form implemented

--- a/imports/ui/layout/nav/bottom/navBottom.html
+++ b/imports/ui/layout/nav/bottom/navBottom.html
@@ -1,6 +1,6 @@
 <template name="navBottom">
 	<footer class="container-fluid w-100 p-0">
-		<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+		<nav class="navbar navbar-expand-lg navbar-light">
 			<div class="container-fluid">
 				{{!-- TODO logos need to be implemented here
                 {{#each logo in logos}}
@@ -8,7 +8,6 @@
 						{{> image src=logo.src title=logo.title alt=logo.alt class="mr-4" height="30"}}
 					</a>
 				{{/each}}
-				--}}
 				<div class="collapse navbar-collapse" id="navbarNavDropdown">
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item active">
@@ -16,6 +15,7 @@
 						</li>
 					</ul>
 				</div>
+				--}}
 			</div>
 		</nav>
 	</footer>
