fetch Record docs from otulea app

--- a/imports/ui/layout/containers/containers.html
+++ b/imports/ui/layout/containers/containers.html
@@ -12,7 +12,7 @@
 <!-- the login render target is used for logged-in users -->
 
 <template name="main-render-target">
-    <!-- {{> navTop}}  -->
+    {{> navTop}}
     <div class="mainwrapper">
         {{> navSide class="d-none d-md-block"}}
         <div class="contentwrapper w-100 vh-100 d-flex p-4">
