--- a/imports/ui/pages/user/user.scss
+++ b/imports/ui/pages/user/user.scss
@@ -1,47 +1,25 @@
-.flip-card {
-  height: 150px;
-  perspective: 1000px; /* Remove this if you don't want the 3D effect */
-  width: 100%;
+.user-sidebar {
+  width: 15%;
 }
 
-.flip-card-inner {
-  height: 100%;
-  position: relative;
-  text-align: center;
+/* ========================================================================== */
+
+.flip-card {
+  perspective: 1000px; /* Remove this if you don't want the 3D effect */
   transform-style: preserve-3d;
+  cursor: pointer;
   transition: transform 0.8s;
-  width: 100%;
 }
 
 .flip {
   transform: rotateY(180deg);
 }
 
-/* Position the front and back side */
 .flip-card-front {
   backface-visibility: hidden;
-  height: 100%;
-  position: absolute;
-  width: 100%;
 }
 
 .flip-card-back {
   backface-visibility: hidden;
-  height: 100%;
-  position: absolute;
-  width: 100%;
-  //-webkit-backface-visibility: hidden; /* Safari */
-}
-
-/* Style the front side (fallback if image is missing) */
-.flip-card-front {
-  background-color: #fff;
-  color: #000;
-}
-
-/* Style the back side */
-.flip-card-back {
-  background-color: #7c7c7c;
-  color: #fff;
   transform: rotateY(180deg);
 }
