scss: remove font-family overrides

--- a/imports/ui/pages/class/visualization/visualization.scss
+++ b/imports/ui/pages/class/visualization/visualization.scss
@@ -329,18 +329,7 @@ button {
   background-color: #1e90ff;
 }
 
-// new graph -----------------------------------------------------------------------------------------------------------------------------------
-body {
-  background-color: #f0f0f0;
-  // padding-top: 60px;
-  font-family: "Roboto", Courier, monospace;
-}
-
-@media (min-width: 792px) and (max-width: 1200px) {
-  body .container {
-    max-width: 90% !important;
-  }
-}
+// GRAPH
 
 .graphcard {
   box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.12);
